# QubitGenerator

./: .gitignore  README.md  pyproject.toml
configs/: test_chip_v1.yaml  test_chip_v1_auto.yaml
docs/: MATH_REFERENCE.md  TIMELINE.md
klayout_package/resonator_gen_kqc/: __init__.py
klayout_package/resonator_gen_kqc/chips/: test_chip.py
klayout_package/resonator_gen_kqc/elements/: __init__.py  capacitive_coupler.py  readout_resonator.py
scripts/: align_cooper_chip.py  build_chip.py  build_cooper_qubits.py  merge_resonators_into_chip.py  sweep_lengths.py
scripts/sim/: _elmer_run.py  _toolchain_test.py  cooper_chip_report.py  cpw_cross_section.py  readout_coupling_cap.py  transmon_island_cap.py
src/resonator_gen/: __init__.py  calibration.py  centerline.py  chip.py  cli.py  config.py  constants.py  constraints.py  couplers.py  cpw.py  keepouts.py  logging_config.py  pcells.py  routing.py
src/resonator_gen/resonators/: __init__.py  base.py  meander.py  spiral.py
tests/: conftest.py  test_anchored_placement.py  test_auto_chip.py  test_calibration.py  test_centerline_length.py  test_chip_build.py  test_constraints.py  test_keepouts.py  test_meander_length.py  test_pcells.py
